# filenotify

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README  README.md  configure  configure.ac  filenotify.config  filenotify.doxygen  filenotify.service
package/: .gitignore
src/: Makefile  Makefile.am  config.c  config.h  filenotify.c  inotify_engine.c  log.c  log.h  nlist.c  nlist.h  timer_engine.c
src/core/: Makefile  config.c  log.c  log.c~  nlist.c  tools.c
src/include/: config.h  filenotify.h  filenotify_engine.h  log.h  nlist.h  plg_notify.h  tools.h
src/plugins/: Makefile  Makefile.am  plg_clamav.c  plg_http_post.c  plg_notify_exec.c  plg_notify_log.c
test/: Makefile  logtest.sh  relad-test.sh  valgrindtest.sh
tests/: Makefile.am  relad-test.sh
tests/extraarg-test/: extraarg-test.sh
tests/logtest/: logtest.sh
tests/reload-test/: reload-test.sh
tests/valgrindtest/: valgrindtest.sh
